# losys

./: .gitignore  CMakeLists.txt  LICENSE  README.md
source/: CMakeLists.txt  main.cpp
source/base/: collapse.cpp  collapse.hpp
source/bdd/: collapse.cpp  collapse.hpp
source/io/: read_pla.hpp  write_pla.hpp
source/kernel/: cube32.hpp  two_lvl32.hpp
source/opt/: exorcism32.cpp  exorcism32.hpp
source/xforms/: aig_to_bdd.cpp  esop_to_aig.cpp  xforms.hpp
test/: cube32.cpp
tools/: CMakeLists.txt
tools/collapse/: CMakeLists.txt  main.cpp
tools/exorcism/: CMakeLists.txt  main.cpp
